# advent-of-code-2021

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
.github/workflows/: ccpp.yml
cmake/: AddGoogleTest.cmake  CommonFunctions.cmake
common/: CMakeLists.txt
common/include/aoc/: circle_list.h  double_buffer.h  image.h  parts.h  point.h  point3d.h  point4d.h  utils.h
common/src/: main.cc
common/test/: test.cc
day01/: CMakeLists.txt
day01/src/: main.cc
day01/test/: test.cc
day02/: CMakeLists.txt
day02/src/: main.cc
day02/test/: test.cc
day03/: CMakeLists.txt
day03/src/: main.cc
day03/test/: test.cc
day04/: CMakeLists.txt
day04/src/: main.cc
day04/test/: test.cc
day05/: CMakeLists.txt
day05/src/: main.cc
day05/test/: test.cc
day06/: CMakeLists.txt
day06/src/: main.cc
day06/test/: test.cc
day07/: CMakeLists.txt
day07/include/: impl.h
day07/src/: main.cc
day07/test/: test.cc
day08/: CMakeLists.txt
day08/src/: main.cc
day08/test/: test.cc
day09/: CMakeLists.txt
day09/src/: main.cc
day09/test/: test.cc
day10/: CMakeLists.txt
day10/include/: impl.h
day10/src/: main.cc
day10/test/: test.cc
day11/: CMakeLists.txt
day11/test/: test.cc
day12/: CMakeLists.txt
day12/test/: test.cc
day13/: CMakeLists.txt
day13/test/: test.cc
day14/: CMakeLists.txt
day14/test/: test.cc
day15/: CMakeLists.txt
day15/test/: test.cc
day16/: CMakeLists.txt
day16/test/: test.cc
day17/: CMakeLists.txt  makefile
day17/test/: test.cc
day18/: CMakeLists.txt
day18/test/: test.cc
day19/: CMakeLists.txt
day19/test/: test.cc
day20/: CMakeLists.txt
day20/test/: test.cc
day21/: CMakeLists.txt
day21/test/: test.cc
day22/: CMakeLists.txt
day22/test/: test.cc
day23/: CMakeLists.txt
day23/test/: test.cc
day24/: CMakeLists.txt
day24/test/: test.cc
day25/: CMakeLists.txt
day25/test/: test.cc
